@@ -2,6 +2,7 @@ Version 1.12 - NO NAME SeT
 -----------------------------
 Core - Genneral:
   - Remove old code that handles the 'id' REQUEST parameter.
+  - Remove all functionality for the module 'lang' parameter... silently ignore this parameter, for now.
 
 Version 1.11.2 - Isabela 
 -----------------------------
